--- a/styles/style.css
+++ b/styles/style.css
@@ -1,97 +1,102 @@
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
   
     color:black;
     background-color: white;
+    font-family: monospace;
 }
-main{
-    background-color: skyblue;
-    border-radius: 10px;
+h1{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 1% 0;
+}
+body,html{
+    height: 450vh;
 }
 
 footer{
     background-color: darkslateblue;
 }
 p{
-    font-family: sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: 300;
     font-size: medium;
     
 }
-header{
-    
-   padding: 5%;
-   margin: 0%;
-  width: 100%;
-  border-radius:10px;
-  background-color: blue;
-}
-/*header{
 
-    background-color: darkslateblue;
-    width:100%;
+header{
+width:100%;
+text-align: center;
     
-}*/
+}
 
 nav{
-    background-color:darkslategrey;
-    border: 3px solid black;
-    border-radius: 8px;
-    width: 40%;
-    position:absolute;
-    top: 0%;
-    left: 50%;
+    background-color:black;
+
+    
+    
     }
 
 
 
-li{
+nav li{
     list-style: disc inside;
-    display: inline;
-   
     margin: 8px;
+    display: inline-block;
     color: black;
 }
-/*#about_link{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    font-weight: 700;
 
-
-}*/
 a{
-    color:skyblue;
-    font-size: 26px;
+    color:white;
+    font-size: 20px;
     font-weight: bold;
+    text-decoration: none;
 }
-/*projects_link{
-    position: absolute;
-    top: 0px;
-    left: 150px;
-    font-weight: 700;
 
-}
-#skills_link{
-    position: relative;
-    top: 0;
-    left: 200px;
-    font-weight: 700;
+.focal-point-container{
+    width: 100%;
     
-}
-#contacts_link{
+    padding: 80px 20px;
+    background-color:grey;
     position: relative;
-    top: 0;
-    left: 300px;
-    font-weight: 700;
+    height: 100vh;
 
-}*/
+}
+.focal-point{
+    background-image: url("../images/WIN_20220730_15_00_40_Pro.jpg");
+    
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+   
+    }
+.focal-point-text{
+    width: 100%;
+    min-height: 100%;
+    background-color: darkslategrey;
+    opacity:0.8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+.text-container p{
+    font-size: 36px;
+    color: white;
+}
+
+
+
 #personal_photo{
-    width: 30%;
-    height: 30%;
+    width: 90%;
     border-radius: 15px;
-    border-style: solid;
-    border-color: darkslategray;
-    border-width: 6px;
+    border: 2px solid white;
 
 }
 main{
@@ -102,105 +107,96 @@ p{
 }
 
 #personal_info_secction{
-    margin: 8px 40% 8px 5%;
-    padding: 6%;
+    width: 100%;
+    margin: 2% 0;
+    padding:2% auto;
     border-radius: 5px;
-    border-width: 3px ;
+    border-width: 2px ;
     border-style: solid;
-    border-color:black;
-    background-color: darkslategrey;
+    border-color:white;
+    background-color:darkslategrey;
 
 }
-course-list{
-    display: block;
-    list-style: disc inside;
-    position: relative;
-    left: 10%;
+.personal_info{
+    width: 100%;
+    border: 2px solid black;
+    background-color: white;
+    border-radius: 5px;
+    margin:10px;
+    padding: 10px;
 
+}
+
+.course-list{
+    display: block;
+    list-style:decimal inside;
+}
+
+#list_of_courses{
+    background-color:white;
 }
 
 /*contact form section style*/
 #contact_form{
-    border: 3px solid black;
-    margin-left: 5%;
-    margin-right: 5%;
+
+    border: 2px solid white;
     border-radius: 5px;
-    background-color: darkslategrey;
+    background: linear-gradient(180deg,darkslategrey,black);
     color: white;
 }
+.contact-form-section{
+    width: 100%;
+}
 input[type="text"],input[type="email"]{
-    border: 2px solid black;
+    border: 2px solid white;
     color: black;
     background-color: white;
-    margin: 4px;
-    position: relative;
-    left: 5%;
-    width:20%;
-    height:10%;
-   
-    border-radius: 4px;
+    margin: 5px;
+    border-radius: 5px;
    
 }
-#email{
-    margin-left: 26px;
-}
+
 input[type="submit"]{
     background-color: white;
     border: 2px solid black;
     margin: 5px;
-    font-size: large;
-    border-radius: 4px;
+    border-radius: 5px;
     width: 10%;
-    height: 10%;
-    position: relative;
-    left: 5%;
-    color: black;
+   
+
 }
 /*project and skill section*/
 #projects-and-skill{
-    border: 3px solid black ;
+    width: 100%;
+    margin: 2% 0%;
+    border: 2px solid white ;
     background-color:darkslategrey;
-    margin-left: 5%;
-    margin-right: 5%;
-    border-radius: 10px;
+    border-radius: 5px;
     display: flex;
     flex-wrap: wrap;
 
 }
-#projects{
-    border: 3px solid black;
+#slill-and-challenges,#projects{
+    border: 3px solid white;
     margin: 8px 8px 8px 3%;
+    padding: 40px 0;
     border-radius:8px;
-    width:45%;  
+    width:100%;  
     background-color: white;
     color: black;
 }
-#slill-and-challenges{
-    border: 3px solid black;
-    margin: 8px 3% 8px 8px;
-    border-radius:8px;
-    margin: 8px;
-    width:45%;
-    background-color: white;
-    color: black;
 
-}
 #slill-and-challenges:hover{
     transform: scale(2);
+}
+#image{
+    border: 2px solid darkslategrey;
 }
 
 /*resume section*/
 #resume{
-    background-color: darkslategrey;
-   
-    border: 3px solid black;
-    margin:10px 4% 10px 6%;
-    border-radius: 8px;
-    width: 35%;
-    position: absolute;
-    top: 24%;
-    left: 55%;
-    color: white;
+ color: black;
+ text-align: center;
     
 }
 #resume:hover{
@@ -208,11 +204,99 @@ input[type="submit"]{
 
 }
 
+.tech-testmon-section{
+    border: 2px solid black;
+    margin: 2% 0;
+    width: 100%;
+    height: 250px;
+    background-color: darkslategrey;
+}
+
 #footer_to_contacts{
     background-color: darkslategrey;
     border: 3px solid black;
     border-radius: 8px;
-    margin: 10px 5% 10px 5%;
+    margin:auto 0;
     color: white;
+    text-align: center;
+    
 }
+/*large box style*/
+#largebox{
+    width: 100%;
+    height: 700px;
+}
+
+/*media query section*/
+
+@media(min-width:740px){
+    body,html{
+       height: 100vh;
+    }
+
+    nav{
+        display: flex;
+        justify-content: space-between;
+        justify-content: center;
+        
+        }
+    
+    .personal_info{
+        display: inline-block;
+        margin: 10px;
+        width: 25%;
+    
+    }
+    .personal_info_container{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        justify-content: space-between;
+    
+    }
+
+    .contact-form-section{
+        width: 60%;
+    }
+
+    
+    #slill-and-challenges,#projects{
+        width:45%;  
+        
+       
+       
+    }
+    #projects-and-skill{
+       
+       
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    
+    }
+
+    #contact_form{
+
+        margin: 2% auto;
+        position: relative;
+        left: 25%;
+    }
+    .tech-testmon-section{
+        border: 2px solid black;
+        margin: 2% 0;
+        width: 60%;
+        position: relative;
+        left: 15%;
+        height: 250px;
+        
+    }
+    
+    
+
+
+
+}
+
+
 
